app/assets/stylesheets/splash.scss
.splashWrapper {
    background: #26262b;
    color:white;
}

.navBar {
    display: flex;
    justify-content: space-between;
    align-items: center;
    height: 72px;
    box-sizing: border-box;
    padding: 8px;
}

.logoIcon {
    height: 65px;
    width: auto;
    transform: rotateY(180deg);
    fill: white;
    margin-top: 10px;
    margin-left: 5px;
}

.rightSideNav {
    display: inherit;
    justify-content: inherit;
    align-items: inherit;
}

.splashNavSeparator {
    width: 2px;
    height: 14px;
    border-radius: 1px;
    background-color: hsla(0,0%,100%,.2);
    margin-right: 12px;
}

.splashLoginButton {
    color: white;
    border: 2px solid white;
    opacity: 0.8;
    border-radius: 20px;
    width: 66px;
    height: 32px;
    text-align: center;
    font-size: 13px;
    margin-right: 18px;
    box-sizing: border-box;
    padding: 5px;
}

.splashLoginButton:hover {
    cursor: pointer;
    opacity: 1;
    transition: opacity 0.25s;
    will-change: opacity;
}

.splashContent {
    min-width: 340px;
}

.splashMessage {
    box-sizing: border-box;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    min-width: 215px;
    max-width: 1200px;
    padding: 50px 50px 0px 50px;
    text-align: center;
    margin: auto;
}

.footer {
    color: orange;
    margin-top: 72px;
    box-sizing: border-box;
    padding: 40px 10% 48px;
}

.skillsBar {
    height: 100%;
    display: flex;
    justify-content: space-around;
    align-items: center;
}

.skillsList {
    margin: 10px 20px;
}

.splashFooterSeparator {
    height: 2px;
    width: 80%;
    background-color: hsla(0,0%,100%,.1);
    margin: auto;
    margin-top: 36px;
    margin-bottom: 34px;
}

.title {
    font-weight: 700;
    font-size: 36px;
    margin-bottom: 20px;
}

.subtitle {
    font-size: 16px;
    margin-bottom: 30px;
    color: gray;
    max-width: 710px;
}

.footerTitle {
    color: white;
    font-size: 14px;
    margin-bottom: 13px;
}

.footerEntry {
    color: gray;
    line-height: 20px;
    font-size: 14px;
}
.callToActionButtons {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.githubButton,
.contactButton {
    box-sizing: border-box;
    width: 250px;
    margin: 10px;
    border-radius: 3px;
    text-align: center;
    box-sizing: border-box;
    padding: 12px;
    font-weight: 600;
}

.githubButton {
    background-color: var(--button-secondary);
}

.githubButton:hover,
.contactButton:hover {
    cursor: pointer;
    transform: translateY(2px);
}

.githubButton:hover {
    background-color: var(--button-secondary-hover);
}

.leftSideNav {
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    width: 40%;
}

.onlineProfileIcon {
    fill: var(--channels-default);
    height: 48px;
}

.onlineProfileIcon:hover {
    fill: var(--text-normal);
}

.splashImages {
    box-sizing: border-box;
    padding-top: 40px;
    height: 410px;
    position: relative;
    overflow: hidden;
}

.deviceImages {
    width: auto;
    position: absolute;
    transition: all .5s ease;
    bottom: 10px;
}

.deviceImagesContainer {
    position: absolute;
    top: 100%;
    left: 50%;
}

.androidPhoneImage {
    margin-left: -384px;
}

.applePhoneImage {
    margin-left: -229.5px;
}

.laptopImage {
    margin-left: -124px;
}

.headsetImage {
    margin-left: 179px;
    bottom: 142px;
    transform: scale(0.75)
}

.potionImage,
.controllerImage,
.desktopImage,
.shieldImage,
.triangleImage1,
.triangleImage2,
.triangleImage3,
.xImage1,
.xImage2,
.circleImage1,
.circleImage2,
.circleImage3,
.squareImage1,
.squareImage2,
.squareImage3,
.dotImage1,
.dotImage2,
.dotImage3,
.dotImage4,
.dotImage5,
.bombImage,
.questionBoxImage,
.goldenCoinImage1,
.goldenCoinImage2,
.floppyDiskImage {
    display: none;
}

.laptopImage,
.headsetImage {
    display: initial;
}

@media (min-width: 848px) {
    .potionImage,
    .controllerImage,
    .desktopImage,
    .shieldImage,
    .triangleImage1,
    .triangleImage2,
    .triangleImage3,
    .xImage1,
    .xImage2,
    .circleImage1,
    .circleImage2,
    .circleImage3,
    .squareImage1,
    .squareImage2,
    .squareImage3,
    .dotImage1,
    .dotImage2,
    .dotImage3,
    .dotImage4,
    .dotImage5,
    .bombImage,
    .questionBoxImage,
    .goldenCoinImage1,
    .goldenCoinImage2,
    .floppyDiskImage {
        display: initial;
    }

    .splashImages {
        height: 643px;
    }
    .callToActionButtons {
        flex-direction: row;
    }

    .potionImage {
        margin-left: -609px;
    }

    .androidPhoneImage {
        margin-left: -548px;
    }

    .applePhoneImage {
        margin-left: -401.5px;
    }

    .controllerImage {
        margin-left: -255px;
    }

    .desktopImage {
        margin-left: -289.5px;
    }

    .laptopImage {
        margin-left: -4px;
    }

    .headsetImage {
        margin-left: 270px;
    }

    .shieldImage {
        margin-left: 423px;
    }

    .goldenCoinImage1 {
        margin-left: -428px;
        bottom: 300px;
    }

    .goldenCoinImage2 {
        margin-left: 80px;
        bottom: 530px;
    }

    .bombImage { 
        margin-left: -481px;
        bottom: 335px;
    }

    .questionBoxImage {
        margin-left: -239px;
        bottom: 462px;
    }

    .floppyDiskImage {
        margin-left: 250px;
        bottom: 392px;
    }

    .triangleImage1,
    .triangleImage2,
    .triangleImage3,
    .xImage1,
    .xImage2,
    .circleImage1,
    .circleImage2,
    .circleImage3,
    .squareImage1,
    .squareImage2,
    .squareImage3,
    .dotImage1,
    .dotImage2,
    .dotImage3,
    .dotImage4,
    .dotImage5 {
        opacity: 0.3;
    }

    .bombImage,
    .goldenCoinImage1,
    .goldenCoinImage2,
    .floppyDiskImage {
        animation-name: floatingAnimation;
        animation-delay: .4s;
        animation-duration: 1.5s;
        animation-iteration-count: infinite;
        animation-timing-function: ease-in-out;
        animation-direction: alternate;
    }

    .triangleImage1 {
        margin-left: -579px;
        bottom: 300px;
    }

    .triangleImage2 {
        margin-left: 31px;
        bottom: 550px;
    }

    .triangleImage3 {
        margin-left: -289px;
        bottom: 448px;
    }

    .xImage1 {
        margin-left: -579px;
        bottom: 510px;
    }

    .xImage2{
        margin-left: 541px;
        bottom: 220px;
    }

    .circleImage1 {
        margin-left: -359px;
        bottom: 530px;
    }

    .circleImage2 {
        margin-left: -199px;
        bottom: 88px;
    }
    
    .circleImage3 {
        margin-left: 576px;
        bottom: 280px;
    }

    .squareImage1 {
        margin-left: 331px;
        bottom: 600px;
    }

    .squareImage2 {
        margin-left: 431px;
        bottom: 400px;
    }

    .squareImage3 {
        margin-left: 17px;
        bottom: 92px;
    }

    .dotImage1 {
        margin-left: -599px;
        bottom: 200px;
    }

    .dotImage2 {
        margin-left: -319px;
        bottom: 600px;
    }

    .dotImage3 {
        margin-left: 181px;
        bottom: 500px;
    }

    .dotImage4 {
        margin-left: 531px;
        bottom: 600px;
    }

    .dotImage5 {
        margin-left: 621px;
        bottom: 140px;
    }
}

@media (max-width: 699px) {
    .laptopImage,
    .headsetImage {
        display: none;
    }

    .androidPhoneImage,
    .applePhoneImage {
        bottom: 70px;
    }

    .androidPhoneImage {
        margin-left: -178px;
    }

    .applePhoneImage {
        margin-left: 34.5px;
    }
}

@keyframes floatingAnimation {
    0% {
        transform: translate3d(0,-4px,0);
    }
    100% {
        transform: translate3d(0,4px,0);
    }
}

